--- a/docs/_includes/themes/twitter/default.html
+++ b/docs/_includes/themes/twitter/default.html
@@ -15,9 +15,9 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="https://antiframes.github.io/sentinelaDosPampas/bootstrap/css/bootstrap.2.2.2.min.css" rel="stylesheet">
-    <link href="https://antiframes.github.io/sentinelaDosPampas/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
-    <link href="https://antiframes.github.io/sentinelaDosPampas/css/kbroman.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/bootstrap/css/bootstrap.2.2.2.min.css" rel="stylesheet">
+    <link href="/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link href="/css/kbroman.css" rel="stylesheet" type="text/css" media="all">
 
     <!-- Le fav and touch icons -->
 
