--- a/docs/_includes/themes/twitter/default.html
+++ b/docs/_includes/themes/twitter/default.html
@@ -15,7 +15,7 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="/bootstrap/css/bootstrap.2.2.2.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
     <link href="/css/kbroman.css" rel="stylesheet" type="text/css" media="all">
 
