--- a/docs/_includes/themes/twitter/default.html
+++ b/docs/_includes/themes/twitter/default.html
@@ -16,8 +16,8 @@
 
     <!-- Le styles -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
-    <link href="/css/kbroman.css" rel="stylesheet" type="text/css" media="all">
+    <link href="https://antiframes.github.io/sentinelaDosPampas/assets/themes/twitter/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link href="https://antiframes.github.io/sentinelaDosPampas/assets/themes/twitter/css/kbroman.css" rel="stylesheet" type="text/css" media="all">
 
     <!-- Le fav and touch icons -->
 
